# algo-api

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.grafana/data/: grafana.db
algorithms/: Dockerfile  README.md  pyproject.toml
algorithms/src/algo_api/: config.py
algorithms/src/algo_api/algorithms/: __init__.py  numeric.py
algorithms/src/algo_api/interface/api/: main.py
algorithms/src/algo_api/interface/api/v1/: __init__.py
algorithms/src/algo_api/interface/api/v1/routes/: algorithms.py
algorithms/src/algo_api/interface/cli/: algorithms.py
algorithms/src/tests/algorithms/: test_ackermann.py  test_factorial.py
algorithms/src/tests/interface/api/: test_api.py
algorithms/src/tests/interface/cli/: test_cli.py
loadgen/: Dockerfile  locustfile.py  requirements.txt
prometheus/: prometheus.yml
src/algo_api/algorithms/: __init__.py  ackermann.py  fibonacci.py  numeric.py
src/algo_api/interface/api/: main.py
src/algo_api/interface/api/v1/routes/: algorithms.py
src/algo_api/interface/cli/: algorithms.py
src/tests/algorithms/: test_ackermann.py  test_fibonacci.py
src/tests/interface/cli/: test_cli.py
