[tool.poetry]
name = "algo-api"
version = "0.1.0"
description = "Sample API to calculate some algorithms"
authors = ["Eduard Maghakyan <edi.maghakyan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
click = "^8.0.1"
uvicorn = "^0.15.0"
prometheus-client = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest-watch = "^4.2.0"
black = "^21.7b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
isort = "^5.9.3"
mypy = "^0.910"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99

[tool.black]
line-length = 99

[tool.poetry.scripts]
algo-api = "algo_api.interface.cli.algorithms:main"
